// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render avatar with menu 1`] = `
<div
  aria-hidden="true"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
    data-testid="avatar-icon-button"
    id="avatar-icon-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
          />
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`render simple avatar 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled"
    data-testid="avatar-icon"
    disabled=""
    id="avatar-icon"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
          />
        </g>
      </svg>
    </span>
  </button>
</div>
`;
